<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">App Prueba</string>

    <!-- textos layout main -->
    <string name="txt_search">Escriba el lugar a buscar</string>

    <!-- textos layout login -->
    <string name="txt_email">Escriba su correo</string>
    <string name="txt_password">Escriba su contraseña</string>
    <string name="txt_login">Iniciar Sesión</string>
    <string name="txt_register">Registrarse</string>

    <!-- textos layout register -->
    <string name="txt_name">Escriba su nombre</string>
    <string name="txt_nickname">Escriba su nickname</string>

    <!-- textos layout create place -->
    <string name="txt_name_place">Nombre de lugar</string>
    <string name="txt_description">Descripción del lugar</string>
    <string name="txt_direction_place">Dirección del lugar</string>
    <string name="txt_phone_place">Telefono del lugar</string>
    <string name="btn_create_place">Crear nuevo lugar</string>

    <!-- Textos validaciones-->
    <string name="es_obligatorio">Es obligatorio</string>
    <string name="maximo_caracteres">Maximo 10 caracteres</string>
    <string name="usuario_registrado">Usuario registrado</string>
    <string name="datos_correctos">Sus datos son correctos</string>
    <string name="datos_incorrectos">Sus datos son incorrectos</string>

    <!-- Textos Home -->
    <string name="txt_btn_register">Registrarse</string>
    <string name="txt_btn_login">Iniciar Sesión</string>
</resources>