<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".activity.CreatePlaceActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:src="@mipmap/ic_launcher_round" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            style="@style/til_form">

            <EditText
                android:id="@+id/name_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/fondo_forms"
                android:hint="@string/txt_name_place"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_layout"
            style="@style/til_form">

            <EditText
                android:id="@+id/description_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/fondo_forms"
                android:gravity="left"
                android:hint="@string/txt_description"
                android:lines="9" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/direction_layout"
            style="@style/til_form">

            <EditText
                android:id="@+id/direction_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/fondo_forms"
                android:hint="@string/txt_direction_place"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:id="@+id/city_place"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@drawable/fondo_forms"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="10dp"/>

        <Spinner
            android:id="@+id/category_place"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@drawable/fondo_forms"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_layout"
            style="@style/til_form">

            <EditText
                android:id="@+id/phone_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:background="@drawable/fondo_forms"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:hint="@string/txt_phone_place"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_create_place"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/btn_create_place"/>

    </LinearLayout>

</ScrollView>

